# telecommunication-project

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  buildrequirments.txt  data.dvc  database.py  docker-compose.yml  get_data.py  logger.py  models.dvc  params.yaml  pyproject.toml  requirements.txt  utils.py  utlis.py
.dvc/: config
docs/: data-description.txt  mkdocs.yml
docs/docs/: index.md
mlruns/.trash/619883192433163745/: meta.yaml
mlruns/619883192433163745/: meta.yaml
mlruns/619883192433163745/40f1427a89644af580e42ed3904f1eab/: meta.yaml
mlruns/619883192433163745/668a1022141e43c8a320148d77736dce/: meta.yaml
mlruns/619883192433163745/86c03867bab140fcbbe74bfe7c4953e3/: meta.yaml
mlruns/619883192433163745/a3af34c6765a4d79912724da2413424f/: meta.yaml
mlruns/619883192433163745/a8875e76cae14d0fa802e9cd5f82a37b/: meta.yaml
mlruns/740651038120529355/: meta.yaml
mlruns/740651038120529355/04a5da3a8baa4899b74a0bd3b62725d8/: meta.yaml
mlruns/740651038120529355/06e20c0506a1474480bdeee3a44423d5/: meta.yaml
mlruns/740651038120529355/08afe4be764c4fe1ad973fb665fef785/: meta.yaml
mlruns/740651038120529355/0ab63df78fcb4152bb417dfe05a1aeae/: meta.yaml
mlruns/models/DecisionTree_model/: meta.yaml
notebooks/: data_cleaning.ipynb
reports/: context.txt
reports/metrics/: metrics.csv
telecommunication/: __init__.py  config.py  dataset.py  features.py  plots.py
telecommunication/api/: main.py
telecommunication/modeling/: predict.py  registry.py  retrain.py  train.py
telecommunication/pipeline/: deployment.py  pipeline.py
(+924 files in other folders)
